# AMLSentinel

./: .gitignore  CLAUDE.md  Makefile  README.md  architecture.md  linkedin-video-script.md  pii-masking-architecture.md  technical-architecture.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a43dd8ea031_add_kyc_and_income_verification_fields_.py  c8f7cd2238e4_add_resolution_and_closed_at_to_alerts.py  cd9c7214db36_initial_schema.py
backend/api/: main.py
backend/api/core/: auth.py  config.py  database.py  pii_masker.py
backend/api/models/: __init__.py  account.py  alert.py  base.py  customer.py  investigation.py  transaction.py
backend/api/repositories/: alert.py  analytics.py  customer.py  investigation.py  transaction.py
backend/api/routes/: alerts.py  analytics.py  auth.py  chat.py  health.py  investigation.py  pattern_analysis.py  sar.py
backend/api/schemas/: account.py  alert.py  analytics.py  auth.py  customer.py  investigation.py  transaction.py
backend/api/seed/: __main__.py  base.py  data_spec.py  geographic.py  large_cash.py  rapid_movement.py  round_trip.py  structuring.py  sudden_activity.py
backend/api/services/: ai_client.py  bulk_export.py  case_file_generator.py  chat.py  checklist_ai.py  false_positive_detector.py  fiu_ind_generator.py  pattern_analysis.py  pdf_generator.py  sar_generator.py  similar_cases.py
backend/api/tests/: conftest.py  test_auth.py  test_core.py  test_health.py  test_seed.py
backend/api/tests/test_core/: test_pii_masker.py
(+162 files in other folders)
